[gd_scene load_steps=4 format=3 uid="uid://lskfqil24r2t"]

[ext_resource type="PackedScene" uid="uid://bimjavdw4ifpw" path="res://scenes/windows/window_base.tscn" id="1_0eh8x"]
[ext_resource type="Script" path="res://scenes/windows/customers/window_create_customer.gd" id="2_wymc6"]
[ext_resource type="Theme" uid="uid://b1v6gwakv465t" path="res://scenes/windows/window.tres" id="3_ban5t"]

[node name="window_create_customer" instance=ExtResource("1_0eh8x")]
title = "Kunde Erstellen"
exclusive = true
always_on_top = true
script = ExtResource("2_wymc6")

[node name="h_box" type="HBoxContainer" parent="content/v_box" index="0"]
layout_mode = 2

[node name="labels" type="VBoxContainer" parent="content/v_box/h_box" index="0"]
layout_mode = 2

[node name="name_label" type="Label" parent="content/v_box/h_box/labels" index="0"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("3_ban5t")
text = "Name / Firma:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="street_label" type="Label" parent="content/v_box/h_box/labels" index="1"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("3_ban5t")
text = "Stra√üe:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="house_number_label" type="Label" parent="content/v_box/h_box/labels" index="2"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("3_ban5t")
text = "Hausnummer:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="zip_label" type="Label" parent="content/v_box/h_box/labels" index="3"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("3_ban5t")
text = "PLZ:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="city_label" type="Label" parent="content/v_box/h_box/labels" index="4"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("3_ban5t")
text = "Stadt:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="email_label" type="Label" parent="content/v_box/h_box/labels" index="5"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("3_ban5t")
text = "E-Mail:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="phone_number_label" type="Label" parent="content/v_box/h_box/labels" index="6"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("3_ban5t")
text = "Telefon:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="inputs" type="VBoxContainer" parent="content/v_box/h_box" index="1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="name_input" type="LineEdit" parent="content/v_box/h_box/inputs" index="0"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_ban5t")

[node name="street_input" type="LineEdit" parent="content/v_box/h_box/inputs" index="1"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_ban5t")

[node name="house_number_input" type="LineEdit" parent="content/v_box/h_box/inputs" index="2"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_ban5t")

[node name="zip_input" type="LineEdit" parent="content/v_box/h_box/inputs" index="3"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_ban5t")

[node name="city_input" type="LineEdit" parent="content/v_box/h_box/inputs" index="4"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_ban5t")

[node name="email_input" type="LineEdit" parent="content/v_box/h_box/inputs" index="5"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_ban5t")

[node name="phone_number_input" type="LineEdit" parent="content/v_box/h_box/inputs" index="6"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_ban5t")

[node name="create_customer_button" type="Button" parent="content/v_box" index="1"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme = ExtResource("3_ban5t")
text = "Erstellen"

[connection signal="pressed" from="content/v_box/create_customer_button" to="." method="_on_create_customer_pressed"]
